<resources>
    <string name="app_name">AppRealCasaMoneda</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a">a</string>
    <string name="welcomeText_ObtainCertificates_fr">Welcome to the Electronic Office of the <b>Real Casa de la Moneda</b></string>
    <string name="questionCertificates_ObtainCertificates_fr">What certificate do you want to obtain?</string>
    <string name="helptxt_ObtainCertificates_fr">Help</string>
    <string name="physicalPerson_cardTxt_ObtainCertificates_fr">Physical Person</string>
    <string name="representation_cardTxt_ObtainCertificates_fr">Representation</string>
    <string name="publicEmployees_cardTxt_ObtainCertificates_fr">Public Employees</string>
    <string name="centralizedSignatureRepresentation_cardTxt_ObtainCertificates_fr">Representation with centralized signature</string>
    <string name="pseudonymsPublicEmployees_cardTxt_ObtainCertificates_fr">Pseudonym for public employees</string>
    <string name="otherCases_cardTxt_ObtainCertificates_fr">Other Cases</string>
    <string name="certificatesTitle_ObtainCertificates_fr">Certificates</string>
    <string name="textGetCertificatesFrg_Description_ObtainCertificates_fr">The FNMT-RMC, as a Certification Service Provider, makes available to you different types of electronic certificates through which you can identify yourself and carry out procedures securely over the Internet.\n\nDepending on the recipient thereof, the FNMT-RCM issues the following types of digital certificates that you can request through our Electronic OFFICE:</string>
    <string name="physicalPersonDropDowntxt_ObtainCertificates_fr">The FNMT Physical Person Certificate, which is issued free of charge to any citizen who holds a DNI or NIE, is the electronic certification issued by FNMT-RCM that links its Subscriber with Signature Verification Data and confirms their personal identity.\n\nThis certificate will allow you to identify yourself electronically and sign or encrypt electronic documents</string>
    <string name="redirectText_PhyPerson_ObtainCertificates_fr">Get Certificates of Physical Person</string>
    <string name="representation_dropdown_title1_ObtainCertificates_fr">Representative of Sole or Joint Administrator</string>
    <string name="representation_dropdown_title1Descriptiontxt_ObtainCertificates_fr">Certificate of representative for sole and joint administrators is the electronic certification issued by FNMT-RCM that links a signer with signature verification data and confirms their identity. The signer acts on behalf of a legal person in the capacity of legal representative with their position of sole or joint administrator registered in the Commercial Register</string>
    <string name="representation_dropdown_title1Redirecttxt_ObtainCertificates_fr">Obtain certificate of Representative of Sole or Joint Administrator</string>
    <string name="representation_dropdown_title2_ObtainCertificates_fr">Representative of Legal Person</string>
    <string name="representation_dropdown_title2Descriptiontxt_ObtainCertificates_fr">Certificate of representative of legal person is the electronic certification issued by FNMT-RCM that links a signer to signature verification data and confirms their identity. This certificate replaces the one traditionally used by public administrations for the tax field and that, later, was extended for other uses. Therefore, this certificate is issued to legal persons for use in their relations with those public administrations, entities and public bodies, linked or dependent on them.</string>
    <string name="representation_dropdown_title2RedirectTxt_ObtainCertificates_fr">Obtain certificate of Representative of Legal Person</string>
    <string name="representation_dropdown_title3_ObtainCertificates_fr">Representative of Entity without Legal Personality</string>
    <string name="representation_dropdown_title3Descriptiontxt_ObtainCertificates_fr">Certificate of representative of entity without legal personality is the electronic certification issued by FNMT-RCM to an entity without legal personality that links a signer to signature verification data and confirms their identity in tax procedures and other areas admitted by current legislation.</string>
    <string name="representation_dropdown_title3redirectTxt_ObtainCertificates_fr">Obtain certificate of Representative of Entity without Legal Personality</string>
    <string name="publicAdministration_cardtxt_ObtainCertificates_fr">Public Administration</string>
    <string name="PublicAministration_dropDown_Description_ObtainCertificates_fr">Law 40/2015, of October 1, on the Legal Regime of the Public Sector, regulates the identification systems of the Public Administrations, as well as the electronic signature systems of the personnel serving the Public Administrations and the electronic seal for automated administrative action.\n\nIf you wish to use any of the systems provided for in the aforementioned Law 40/2015, and therefore are interested in your Administration having the corresponding agreement with FNMT-RCM for the provision of the same, you can direct your query to comercial.ceres@fnmt.es .</string>
    <string name="PublicAministration_dropDown_RedirectTxt_ObtainCertificates_fr">Obtain Public Sector Certificate</string>
    <string name="componentCertificates_cardTxt_ObtainCertificates_fr">Component Certificates</string>
    <string name="ComponentCertificates_dropDown_Description_ObtainCertificates_fr">FNMT-RCM also issues electronic certificates for the identification of servers or computer applications inheriting the trust of FNMT-RCM as a Certification Authority. Within this category we make available to you signature certificates and entity seal certificates</string>
    <string name="ComponentCertificates_dropDown_RedirectTxt_ObtainCertificates_fr">Obtain Component Certificate</string>
    <string name="technicalSupport_cardTxt_ObteinCertificates_fr">Contact technical support</string>
    <string name="oc_pp_title">Obtain <b>physical person</b> \ncertificate</string>
    <string name="oc_pp_nav">Obtein Certificate/Physical Person</string>
    <string name="oc_pp_title_steps">Select step to perform</string>
    <string name="oc_pp_step1_title">Preconfiguration</string>
    <string name="oc_pp_step2_title">Apply for certificate</string>
    <string name="oc_pp_step3_title">Accredit previous identity</string>
    <string name="oc_pp_step4_title">Download certificate</string>
    <string name="oc_pp_desc_txt">The FNMT Digital Certificate for Physical Person is the electronic certification issued by FNMT-RCM that links its subscriber with Verification Data of Signature and confirms their identity.\n\nThis certificate, also known as Citizen or User Certificate, is a digital document that contains your identifying data. It will allow you to identify yourself on the Internet and exchange information with other people and organizations with the guarantee that only you and your interlocutor can access it.</string>
    <string name="oc_pp_dropdown1_title">Who can obtain the Physical Person Certificate?</string>
    <string name="oc_pp_dropdown2_title">Who can obtain a digital certificate?</string>
    <string name="oc_pp_dropdown3_title">What is it for?</string>
    <string name="oc_pp_dropdown4_title">Where can I use my certificate?</string>
    <string name="oc_pp_dropdown1_text">Any Spanish or foreign citizen, over age or emancipated minor who is in possession of their ID or NIE, can apply for and obtain their digital certificate for free to sign and accredit their identity securely on the Internet.</string>
    <string name="oc_pp_dropdown2_text">There are 2 distinct ways to obtain your Physical Person Digital Certificate as a downloadable file on your computer:</string>
    <string name="oc_pp_dropdown2_txtlist1">With in-person accreditation at an office.</string>
    <string name="oc_pp_dropdown2_txtlist2">Using your DNIe.</string>
    <string name="oc_pp_dropdown2_go_to_softwCertificate">Obtain software certificate</string>
    <string name="oc_pp_dropdown3_text1">The Physical Person Digital Certificate will allow you to securely perform procedures with Public Administration and Private Entities via the Internet, such as:</string>
    <string name="oc_pp_dropdown3_list1">Presentation and liquidation of taxes</string>
    <string name="oc_pp_dropdown3_list2">Presentation of appeals and claims</string>
    <string name="oc_pp_dropdown3_list3">Completion of population and housing census data</string>
    <string name="oc_pp_dropdown3_list4">Consultation and registration in the municipal registry</string>
    <string name="oc_pp_dropdown3_list5">Consultation of traffic fines</string>
    <string name="oc_pp_dropdown3_list6">Consultation and procedures for grant applications</string>
    <string name="oc_pp_dropdown3_list7">Consultation of electoral college assignments</string>
    <string name="oc_pp_dropdown3_list8">Reported actions</string>
    <string name="oc_pp_dropdown3_list9">Electronic signature of official documents and forms</string>
    <string name="oc_pp_dropdown3_text2">Thanks to your FNMT Physical Person Certificate you can forget about unnecessary travel and waiting.</string>
    <string name="oc_pp_dropdown4_text">In the following link, some of the services offered to citizens by Organizations and Entities are detailed. \n\nAccessing secure websites requires that the browser from which you access has the certificate installed.</string>
    <string name="oc_pp_dropdown3_go_to_services">Services offered to citizens by Organizations and Entities</string>
    <string name="oc_pp_step1">Step 1:</string>
    <string name="oc_pp_step1_nav">Obtain certificates/Physical person/Preconfiguration</string>
    <string name="oc_repre_step1_nav">Obtain certificates/Representative/Administrator/Preconfiguration</string>
    <string name="oc_pp_step1_text">Before beginning the process of applying for your Certificate, you must ensure that your computer has the necessary software installed for key generation. \n\nPlease read and carefully follow the following instructions to avoid possible errors during the certificate obtaining process:</string>
    <string name="oc_pp_step1_dropdown1_title">Essential reminders</string>
    <string name="oc_pp_step1_dropdown1_txtlist1">Do not format the computer, between the application and download of the certificate process.</string>
    <string name="oc_pp_step1_dropdown1_txtlist2">The entire obtaining process must be done on the same computer and by the same user.</string>
    <string name="appointmemtTxt">Appointment Request</string>
    <string name="appointmemt_go_to_Continue">Continue</string>
    <string name="appointmemtxt2">Appointment day and time</string>
    <string name="appointment_calendar_unavailable">Unavailable</string>
    <string name="appointment_calendar_available">Available</string>
    <string name="appointment_calendar_busy">Busy</string>
    <string name="appointment_calendar_selection">You have selected 11/23/2022</string>
    <string name="appointmen_calendar_time1">08:30</string>
    <string name="appointmen_calendar_time2">09:30</string>
    <string name="appointmen_calendar_time3">10:00</string>
    <string name="appointmen_calendar_time4">10:30</string>
    <string name="appointmen_calendar_time5">11:00</string>
    <string name="appointmen_calendar_time6">12:00</string>
    <string name="appointmen_calendar_time7">13:00</string>
    <string name="appointmen_calendar_time8">15:30</string>
    <string name="appointmen_calendar_time9">16:00</string>
    <string name="appointmen_calendar_time10">16:30</string>
    <string name="appointmen_calendar_time11">17:00</string>
    <string name="appointmen_calendar_time12">18:00</string>
</resources>